src/test/ui/moves/move-in-guard-2.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/move-in-guard-2.rs:8:24
   |
LL |     let x: Box<_> = Box::new(1);
   |         - move occurs because `x` has type `Box<i32>`, which does not implement the `Copy` trait
...
LL |         (_, 2) if take(x) => (),
   |                        ^
   |                        |
   |                        value moved here
   |                        value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
